# meesman-wrapper

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
meesman/: __init__.py  __main__.py  client.py  config.py  exceptions.py  server.py  session.py
meesman/endpoints/: __init__.py  auth.py  portfolios.py  registrations.py  transactions.py  yields.py
meesman/models/: __init__.py  auth.py  base.py  order.py  portfolio.py  registration.py  trade.py  yields.py
