[project]
name = "meesman"
authors = [
    { name = "Michael H.", email = "michael@iptables.sh" },
]
version = "0.1.0"
description = "Unofficial Python wrapper for the (reverse-engineered) public Meesman API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
]
